# OperatingSystemsAssignment2

./: CMakeLists.txt  EXEC_STATUS.cpp  EXEC_STATUS.h  Makefile  countwords.cpp  countwords.h  dictentry.cpp  dictentry.h  main.cpp  populatetree.cpp  populatetree.h  threadHelper.cpp  threadHelper.h
